# cel-cpp

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  cloudbuild.yaml
.bcr/: README.md  metadata.template.json  source.template.json
base/: BUILD  README  allocator.h  allocator_test.cc  ast.cc  ast.h  ast_internal.cc  ast_internal.h  ast_internal_test.cc  ast_test.cc  ast_utility.cc  ast_utility.h  ast_utility_test.cc  attribute.cc  attribute.h  attribute_set.h  builtins.h  canonical_errors.cc  canonical_errors.h  function.cc  function.h  function_adapter.h  function_adapter_test.cc  function_descriptor.h  function_interface.h  function_result.h  function_result_set.h  handle.h  kind.cc  kind.h  kind_test.cc  managed_memory.h  memory.cc  memory.h  memory_manager.cc  memory_manager.h  memory_manager_test.cc  memory_test.cc  operators.cc  operators.h  (+31 more)
bazel/: BUILD  antlr.bzl  antlr.patch  cat_param_file.cc  cel_cc_embed.bzl  cel_proto_transitive_descriptor_set.bzl  deps.bzl  deps_extra.bzl
checker/: BUILD  checker_options.h  optional.cc  optional.h  optional_test.cc  standard_library.cc  standard_library_test.cc  type_check_issue.cc  type_check_issue.h  type_check_issue_test.cc  type_checker.cc  type_checker.h  type_checker_builder.cc  type_checker_builder.h  type_checker_builder_factory.cc  type_checker_builder_factory.h  type_checker_builder_factory_test.cc  type_checker_builder_test.cc  type_checker_subset_factory.cc  type_checker_subset_factory.h  type_checker_subset_factory_test.cc  validation_result.h  validation_result_test.cc
codelab/: BUILD  Dockerfile  README.md  exercise1.cc  exercise10.cc  exercise10.h  exercise10_test.cc  exercise1_test.cc  exercise2.cc  exercise2.h  exercise2_test.cc  exercise3_test.cc  network_functions.cc  (+2 more)
conformance/: BUILD  BUILD.bazel  opt-test.sh  run.bzl  run.cc  server.cc  service.cc  service.h  value_conversion.cc  value_conversion.h
conformance/policy/: BUILD  policy_conformance_test.bzl  policy_conformance_test.cc
eval/compiler/: BUILD  BUILD.bazel  cel_expression_builder_flat_impl.cc  cel_expression_builder_flat_impl.h  cel_expression_builder_flat_impl_test.cc  check_ast_extensions.cc  check_ast_extensions.h  check_ast_extensions_test.cc  comprehension_vulnerability_check.cc  comprehension_vulnerability_check.h  constant_folding.cc  constant_folding.h  constant_folding_test.cc  flat_expr_builder.cc  flat_expr_builder.h  flat_expr_builder_comprehensions_test.cc  flat_expr_builder_extensions.cc  flat_expr_builder_extensions.h  flat_expr_builder_extensions_test.cc  flat_expr_builder_short_circuiting_conformance_test.cc  flat_expr_builder_test.cc  instrumentation.h  instrumentation_test.cc  qualified_reference_resolver.cc  qualified_reference_resolver.h  qualified_reference_resolver_test.cc  regex_precompilation_optimization.cc  regex_precompilation_optimization_test.cc  resolver.cc  resolver.h  resolver_test.cc
eval/proto/: BUILD.bazel  cel_error.proto
eval/public/: BUILD  BUILD.bazel  activation.cc  activation.h  activation_bind_helper.cc  activation_bind_helper.h  activation_bind_helper_test.cc  activation_test.cc  ast_rewrite.cc  ast_rewrite.h  ast_rewrite_native.cc  ast_rewrite_native.h  ast_rewrite_native_test.cc  ast_rewrite_test.cc  ast_traverse.cc  ast_traverse.h  ast_traverse_native.cc  ast_traverse_native.h  ast_traverse_native_test.cc  ast_traverse_test.cc  ast_visitor.h  ast_visitor_base.h  ast_visitor_native.h  ast_visitor_native_base.h  base_activation.h  builtin_func_registrar.cc  builtin_func_registrar.h  builtin_func_registrar_test.cc  builtin_func_test.cc  cel_attribute.cc  cel_attribute.h  cel_attribute_test.cc  cel_builtins.h  cel_expr_builder_factory.cc  cel_expr_builder_factory.h  cel_expr_builder_factory_test.cc  cel_expression.h  cel_function.cc  cel_function.h  cel_function_adapter.cc  (+68 more)
eval/public/containers/: BUILD  container_backed_list_impl.h  container_backed_map_impl.cc  container_backed_map_impl.h  container_backed_map_impl_test.cc  field_access.cc  field_access.h  field_access_test.cc  field_backed_list_impl.cc  field_backed_list_impl.h  field_backed_list_impl_test.cc  field_backed_map_impl.cc  field_backed_map_impl.h  field_backed_map_impl_test.cc  internal_field_backed_list_impl_test.cc  internal_field_backed_map_impl.cc  internal_field_backed_map_impl.h  internal_field_backed_map_impl_test.cc
eval/public/structs/: BUILD  cel_proto_descriptor_pool_builder.cc  cel_proto_descriptor_pool_builder_test.cc  cel_proto_lite_wrap_util.cc  cel_proto_lite_wrap_util.h  cel_proto_lite_wrap_util_test.cc  cel_proto_wrap_util.cc  cel_proto_wrap_util.h  cel_proto_wrap_util_test.cc  cel_proto_wrapper.cc  cel_proto_wrapper.h  cel_proto_wrapper_test.cc  dynamic_descriptor_pool_end_to_end_test.cc  field_access_impl.cc  field_access_impl.h  field_access_impl_benchmark_test.cc  field_access_impl_test.cc  legacy_any_packing.h  legacy_type_adapter.h  legacy_type_adapter_test.cc  legacy_type_info_apis.h  legacy_type_provider.cc  legacy_type_provider.h  legacy_type_provider_test.cc  proto_message_type_adapter.cc  proto_message_type_adapter.h  proto_message_type_adapter_test.cc  protobuf_descriptor_type_provider.cc  protobuf_descriptor_type_provider.h  protobuf_descriptor_type_provider_test.cc  protobuf_value_factory.h  trivial_legacy_type_info.h  trivial_legacy_type_info_test.cc
eval/public/testing/: BUILD  debug_string.cc  debug_string.h  debug_string_test.cc  matchers.cc  matchers.h  matchers_test.cc
eval/tests/: BUILD  BUILD.bazel  README.md  allocation_benchmark_test.cc  benchmark_test.cc  end_to_end_test.cc  expression_builder_benchmark_test.cc  memory_safety_test.cc  mock_cel_expression.h  modern_benchmark_test.cc  request_context.proto  unknowns_end_to_end_test.cc
testutil/: BUILD  BUILD.bazel  baseline_tests.cc  baseline_tests.h  baseline_tests_test.cc  expr_printer.cc  expr_printer.h  test_data_gen.cc  test_data_io.cc  test_data_io.h  test_data_test.cc  test_data_util.cc  test_data_util.h  test_json_names.proto  test_macros.cc  test_macros.h  util.h
(+1309 files in other folders)
