licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

proto_library(
    name = "cel_error_proto",
    srcs = [
        "cel_error.proto",
    ],
    deps = [
    ],
)

cc_proto_library(
    name = "cc_cel_error",
    visibility = ["//visibility:public"],
    deps = [":cel_error_proto"],
)
